apps/hasadna-argocd/templates/argocd-dex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-dex
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: "argocd-dex.rke2.hasadna.org.il"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-dex-server
            port:
              number: 5556
  tls:
  - hosts:
    - "argocd-dex.rke2.hasadna.org.il"
    secretName: argocd-dex-ingress-cert
